--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -7,7 +7,11 @@
 %% Additional packages and commands
 \usepackage{parskip}
 \setlist{itemsep=-2pt} % Reducing white space in lists slightly
-\renewcommand{\deg}{\si{\degree}\xspace} % Use \deg easily, everywhere
+\renewcommand{\deg}{\si{\degree}\xspace} % Use \deg easily, everywher
+
+%% Custom Packages
+\usepackage{circuitikz}
+\usepackage{subcaption}
 
 %% ----------------------------------------------------------------------
 %%    Begin of document + Frontmatter (Roman page numbering)
