--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -42,7 +42,7 @@
 %\listoffigures
 %\listoftables
 
-\input{frontmatter/nomenclature}
+%\input{frontmatter/nomenclature}
 
 %% ----------------------------------------------------------------------
 %%    Mainmatter (Arabic page numbering)
