change title headers

--- a/documentation/mainmatter/chapter-3.tex
+++ b/documentation/mainmatter/chapter-3.tex
@@ -1,5 +1,5 @@
-\chapter{Implementation}
-\label{chapter:implementation}
+\chapter{Implementation: Frontend}
+\label{chapter:implementation-frontend}
 
 To create an Application which can integrate into the daily lifes of someone, we will use the Flutter Technology Stack to create Software which can be accessed from many different platforms. For Developement, we focused on the usage of the Application on an Android Mobile Phone, however if we would like to expand our Application onto different plattforms, it would not require a lot of additional work.
 
