add table lines

--- a/documentation/mainmatter/introduction.tex
+++ b/documentation/mainmatter/introduction.tex
@@ -40,10 +40,14 @@ We decided on the following criterias for evaluating which idea to choose:
 \end{itemize}
 
 \begin{table}[!h]
-    \begin{tabular}{lllllr}
-        \multicolumn{1}{c}{idea} & practical use   & ease of implementation & beneficial      & originality     & total score  \\
-        Recipe generator         & 5 * \textbf{30} & 8 * \textbf{5}         & 7 * \textbf{20} & 5 * \textbf{10} & \textbf{400} \\
-        Gift Idea Generator      & 7 * \textbf{30} & 8 * \textbf{5}         & 9 * \textbf{20} & 8 * \textbf{10} & \textbf{510}
+    \begin{tabular}{|lllll|r|}
+        \hline
+        idea                & practical use   & ease of implementation & beneficial      & originality     & total score  \\
+        \hline
+        Recipe generator    & 5 * \textbf{30} & 8 * \textbf{5}         & 7 * \textbf{20} & 5 * \textbf{10} & \textbf{400} \\
+        \hline
+        Gift Idea Generator & 7 * \textbf{30} & 8 * \textbf{5}         & 9 * \textbf{20} & 8 * \textbf{10} & \textbf{510} \\
+        \hline
     \end{tabular}
 \end{table}
 
