--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -10,6 +10,7 @@
 \renewcommand{\deg}{\si{\degree}\xspace} % Use \deg easily, everywher
 
 %% Custom Packages
+\usepackage{tikz}
 \usepackage{circuitikz}
 \usepackage{subcaption}
 
