--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -23,27 +23,27 @@
 \frontmatter
 
 %% Define the main parameters
-\title{A Title to the Report}
-\subtitle{A Catchy Optional Subtitle \\ that Grabs the Attention}
+\title{Gift Idea Generator}
+\subtitle{Gifting made easy \\ Graded Miniproject}
 \author{Fabio Zahner \& Silvan Lendi}
 
-\subject{AiFo: AiFoundations} % Cover only
+\subject{AI Foundations} % Cover only
 
-\affiliation{Ostschweizer Fachhochschule} % Cover only DE
-%\affiliation{Eastern Switzerland University of Applied Sciences} % Cover only EN
+% \affiliation{Ostschweizer Fachhochschule} % Cover only DE
+\affiliation{Eastern Switzerland University of Applied Sciences} % Cover only EN
 %\affiliation{Haute École Spécialisée de Suisse Orientale} % Cover only FR
 %\affiliation{Scuola Universitaria Professionale della Svizzera Orientale} % Cover only IT
 
-\coverimage{figures/christmas-tree.jpeg} % Aspect ratio of 2:3 (portrait) recommended
+\coverimage{figures/christmas-tree-adjusted.jpeg} % Aspect ratio of 2:3 (portrait) recommended
 \definecolor{title}{HTML}{D72964} % Color for cover title
 
 \makecover
 
-\input{frontmatter/title-report}
-\input{frontmatter/preface}
-\input{frontmatter/summary}
+% \input{frontmatter/title-report}
+% \input{frontmatter/preface}
+% \input{frontmatter/summary}
 
-\tableofcontents
+% \tableofcontents
 %\listoffigures
 %\listoftables
 
@@ -69,7 +69,7 @@
 \setcounter{biburlucpenalty}{7000}
 
 %% Add bibliography
-\printbibliography[heading=bibintoc,title=References]
+% \printbibliography[heading=bibintoc,title=References]
 
 %% ----------------------------------------------------------------------
 %%    Appendix (Letters for chapters)
@@ -77,8 +77,8 @@
 
 \appendix
 
-\input{appendix/appendix-a}
-\input{appendix/appendix-b}
+% \input{appendix/appendix-a}
+% \input{appendix/appendix-b}
 %\input{appendix/appendix-c} % Create file to add
 
 \end{document}
