--- a/documentation/layout/ost-report.cls
+++ b/documentation/layout/ost-report.cls
@@ -176,8 +176,8 @@
             \ifdefvoid{\@affiliation}{}{\color{white}\titlestyle\@affiliation}};
 
         %% Add the logo in the bottom left
-        \node[above right=10mm] at (current page.south west) {%
-            \includegraphics[width=0.35\linewidth]{layout/ost/ost-logo-de.png}}; % can be changed to any logo (DE, EN, FR, IT)
+        % \node[above right=10mm] at (current page.north west) {%
+        %     \includegraphics[width=0.35\linewidth]{layout/ost/ost-logo-de.png}}; % can be changed to any logo (DE, EN, FR, IT)
 
         %% Add the banner with the title, subtitle, subject and author(s)
         \node[below=2cm,fill=black!85,minimum width={\paperwidth},inner ysep=25pt,opacity=0.6,text opacity=1] at (current page.north) {%
