--- a/documentation/mainmatter/conclusion.tex
+++ b/documentation/mainmatter/conclusion.tex
@@ -1,4 +1,25 @@
 \chapter{Conclusion}
 \label{chapter:conclusion}
 
-\emph{A conclusion...}
+In this project, we successfully developed a Gift Idea Generator, demonstrating the practical application of Large Language Models in solving real-world challenges. By leveraging the OpenAI Assistant through a Flutter-based mobile application, we created a tool that simplifies the often challenging task of finding the perfect gift.
+
+During Developement, we encountered the following challanges:
+
+\begin{itemize}
+	\item Prompt engineering: Creating effective prompts to generate the desired JSON
+	\item JSON parsing: Handling and processing JSON data received from the API, with Error handling in case returned JSON is not valid.
+	\item User interface design: Creating an intuitive and visually appealing user interface.
+	\item API integration: Integrating the OpenAI API into the Flutter app.
+\end{itemize}
+
+While we successfully developed a functional Gift Idea Generator, we recognize that we didn't fully exploit the potential of the OpenAI Assistant. More advanced features like Code Interpreters or external API integrations could have significantly enhanced the app's capabilities. Although, given the inherent complexity of AI integration in this relatively straightforward use case, we are satisfied with the current outcome.
+
+\subsection*{Future Work}
+
+While our current implementation focuses on Android mobile platforms, the Flutter framework allows for easy future expansion to other platforms. Potential future improvements could include:
+\begin{enumerate}
+	\item Expanding the range of input parameters
+	\item Implementing more sophisticated filtering of gift ideas
+	\item Adding user feedback functionality to improve recommendation accuracy
+	\item Supporting multiple languages
+\end{enumerate}
