--- a/documentation/mainmatter/introduction.tex
+++ b/documentation/mainmatter/introduction.tex
@@ -27,7 +27,7 @@ Immediately, we thought about the practicality and implementation side of things
 A belt balancer in factorio serves the use of distributing X number of input belts or conveyors (that transport materials) to Y number of outputs.
 In the game, you can import structures such as a belt balancer in the form of a blueprint string.
 This string looks like glibberish to the human eye because the game first decodes the string using base64 and afterwards uses zlib inflate to finally get the json representation of the individual strucutres that will be placed in the game to complete the balancer.
-To many this will sound like an application where a Large Language Model will no work very well to generate these complex and very error intolerant string, and you are correct!
+To many, this will sound like an application where a Large Language Model will not work well to generate these complex and very error intolerant string, and you are correct!
 We generated such a string 10 times and not once did the string import work in the game itself.
 This idea was not going to work well so it is eliminated.
 
