--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -77,7 +77,7 @@
 
 \appendix
 
-% \input{appendix/appendix-a}
+\input{appendix/appendix-a}
 % \input{appendix/appendix-b}
 %\input{appendix/appendix-c} % Create file to add
 
