--- a/documentation/mainmatter/chapter-2.tex
+++ b/documentation/mainmatter/chapter-2.tex
@@ -1,8 +1,12 @@
 \chapter{Implementation: Backend}
 \label{chapter:implementation-bakend}
 
-In order to make use of ChatGPT in your application so called "assistants" can be used by calling the OpenAI-API.
-We created our assistant under the name ``fabio\_silvan\_giftassistant'' and provided it with system instructions.
-It was instructed to provide 5 gift ideas and to parse the input as constraints accordingly.
-As a model we chose ``gpt-4o-mini'' as it is compatible with json\_schema-formats (see \ref{fig:jsonschema}) and more than capable for our task.
-The json-schema helps control the output format which in turn makes parsing the returned message in our application a lot easier.
+To integrate ChatGPT into our application, we utilized the OpenAI API to set up a specialized "assistant" named ``fabio\_silvan\_giftassistant''.
+This assistant is specifically to generate gift ideas based on user-provided preferences and constraints that come from the Frontend.
+By configuring system instructions tailored to our requirements, we ensured that it would effectively parse input constraints and consistently return a list of five gift suggestions.
+
+For the model, we selected gpt-4-turbo due to its compatibility with JSON Schema formats, which enables structured outputs and ensures an easy integration with our application's data parsing processes.
+Using JSON Schema has proven especially helpful in guiding the assistant\textquotesingle s response structure, making the parsing of returned messages easier.
+
+While additional tools like file search, code interpreter, and external function calling are available, we found them unnecessary for this project.
+The assistant\textquotesingle s core design and clear output schema provide all the functionality needed to meet our specific gift recommendation requirements. 
