changes and final version

--- a/documentation/mainmatter/chapter-2.tex
+++ b/documentation/mainmatter/chapter-2.tex
@@ -1,5 +1,5 @@
 \chapter{Implementation: Backend}
-\label{chapter:implementation-bakend}
+\label{chapter:backend}
 
 To integrate ChatGPT into our application, we utilized the OpenAI API to set up a specialized "assistant" named ``fabio\_silvan\_giftassistant''.
 This assistant is specifically to generate gift ideas based on user-provided preferences and constraints that come from the Frontend.
